--- a/index.html
+++ b/index.html
@@ -11,7 +11,183 @@
 </head>
 
 <body>
-    <h1>Hello Gadgets</h1>
+    <!-- Navigation Part -->
+    <section>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="assets/logo.png" alt="logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                    <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Product</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </section>
+    <!-- Carousel Part -->
+    <section>
+        <div class="container banner">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row align-items-center">
+                            <div class="col-md-5">
+                                <h1>Macbook Pro</h1>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At veniam vel possimus aliquid minus assumenda perferendis qui mollitia sapiente voluptate?</p>
+                                <button class="buy-now">Buy Now >></button>
+                            </div>
+                            <div class="col-md-7">
+                                <img src="assets/banner-products/product-1.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row align-items-center">
+                            <div class="col-md-5">
+                                <h1>Bluetooth Sound</h1>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At veniam vel possimus aliquid minus assumenda perferendis qui mollitia sapiente voluptate?</p>
+                                <button class="buy-now">Buy Now >></button>
+                            </div>
+                            <div class="col-md-7">
+                                <img src="assets/banner-products/slider-1.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row align-items-center">
+                            <div class="col-md-5">
+                                <h1>Air Sound Pro</h1>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At veniam vel possimus aliquid minus assumenda perferendis qui mollitia sapiente voluptate?</p>
+                                <button class="buy-now">Buy Now >></button>
+                            </div>
+                            <div class="col-md-7">
+                                <img src="assets/banner-products/slider-3.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
+    <!-- Mobile Part -->
+    <section>
+        <div class="container mobile-part">
+            <div class="heading d-flex justify-content-between">
+                <h3>Smartphone</h3>
+                <h4>See All</h4>
+            </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="assets/phone/phone-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">iPhone 11Pro</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5>$999</h5>
+                            <button class="buy-now">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="assets/phone/phone-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Samsung Galaxy 10Pro</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5>$799</h5>
+                            <button class="buy-now">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="assets/phone/phone-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Samsung Galaxy Note10+</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5>$699</h5>
+                            <button class="buy-now">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Laptop Part -->
+    <section>
+        <div class="container mobile-part">
+            <div class="heading d-flex justify-content-between">
+                <h3>Laptop</h3>
+                <h4>See All</h4>
+            </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="assets/laptop/product-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">iPhone 11Pro</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5>$999</h5>
+                            <button class="buy-now">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="assets/laptop/product-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Samsung Galaxy 10Pro</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5>$799</h5>
+                            <button class="buy-now">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="assets/laptop/product-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Samsung Galaxy Note10+</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5>$699</h5>
+                            <button class="buy-now">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
