--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="card h-100">
                         <img src="assets/laptop/product-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">iPhone 11Pro</h5>
+                            <h5 class="card-title">Macbook Pro</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <h5>$999</h5>
                             <button class="buy-now">Buy Now >></button>
@@ -167,7 +167,7 @@
                     <div class="card h-100">
                         <img src="assets/laptop/product-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Samsung Galaxy 10Pro</h5>
+                            <h5 class="card-title">Samsung Notebook</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <h5>$799</h5>
                             <button class="buy-now">Buy Now >></button>
@@ -178,7 +178,7 @@
                     <div class="card h-100">
                         <img src="assets/laptop/product-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Samsung Galaxy Note10+</h5>
+                            <h5 class="card-title">Lenevo Pro+</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <h5>$699</h5>
                             <button class="buy-now">Buy Now >></button>
