--- a/index.html
+++ b/index.html
@@ -188,6 +188,31 @@
             </div>
         </div>
     </section>
+    <!-- Categories Part -->
+    <section>
+        <div class="container category-part">
+            <h2>Categories</h2>
+            <div class="row">
+                <div class="col-md-3 d-flex align-items-center justify-content-center cat-item">
+                    <img src="assets/Categories/bag.png" alt="">
+                </div>
+                <div class="col-md-3">
+                    <div class="rwo align-items-center justify-content-center cat-item">
+                        <img src="assets/Categories/perfume.png" alt="">
+                    </div>
+                    <div class="rwo align-items-center justify-content-center cat-item">
+                        <img src="assets/Categories/shoe.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex align-items-center justify-content-center">
+                    <img class="img-fluid" src="assets/Categories/pale-order.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>&copy;Baktear Mohammed Amran 2022. All rights reserved.</p>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
